Spots Page: - Added a background color to Spots, for the days list - put most of the page in an IF block, in case there are NO days. - fix bug in day getter for the goofy ordering - fiddle with popovers to get them to behave on mobile. - re organized, pic are featured more -- 12 pics, either 3/4 or 4x3 -- fix links -- add code for Pano symbol and video in Spot pictures, also css/html in onespot.ihtml --- move some pano CSS into whuCss (should do more of this) Cast a Pic into a Video A couple of Story pages didn't have captions.

--- a/css/whuBase.css
+++ b/css/whuBase.css
@@ -20,6 +20,16 @@ body {
   shared 
 ==================================== */
 
+#thegal>p strong {
+	position: absolute;
+	color: #f0f;
+	font-size: 200%;
+}
+#thegal>p strong>img {
+	border: 0;		
+}
+
+
 /* un-jumbo jumbotron a bit: */
 .jumbotron { 
 	background-color: transparent; 		/* un-color jumbotrons */
@@ -38,7 +48,6 @@ body {
 
 .hideme { display: none; }
 .squareme {	object-fit: cover; }
-
 
 /* ================================= 
   Media Queries
